# packet-analyzer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt
dashboard/backend/: package-lock.json  package.json  server.js
dashboard/frontend/src/: App.jsx  index.css
include/: dpi_engine.h  packet_parser.h  pcap_live_capturer.h  rule_manager.h
src/: dpi_engine.cpp  main_daemon.cpp  main_dpi.cpp  packet_parser.cpp  pcap_live_capturer.cpp  types.cpp
